# futureworld_undrstnd

./: .gitignore  .windsurfrules  Rules_example_1.md
scan_sources/: README.md  poem.txt  pyproject.toml  requirements-streamlit.txt  requirements.txt
scan_sources/db/: chroma.sqlite3
scan_sources/outputs/: generate_outputs_20250407_114653.md  market_analysis_report copy.md  prep_research_plan_20250407_114653.md  synthesize_findings_20250407_114653.md
scan_sources/src/db/: chroma.sqlite3
scan_sources/src/outputs/: synthesize_findings_20250407_130133.md
scan_sources/src/outputs/1/: review_research_plan_20250407_124313.md  synthesize_findings_20250407_124313.md
scan_sources/src/outputs/2/: prep_research_plan_20250407_130132.md
scan_sources/src/scan_sources/: approved_research_plan.json  config.py  config.yaml  crew_perplexity.py  litellm_patch.py  llm_config.py  main.py  models.py  notes.md  research_plan copy.json  research_plan.json  streamlit_app.py  temp.md
scan_sources/src/scan_sources/Archive/: main copy 3b.py  main copy 4.py  main copy 5.py  main copy.py  models copy.py  models2.py  models_old.py
scan_sources/src/scan_sources/db/: chroma.sqlite3
scan_sources/src/scan_sources/interaction_data/: flow_status.json
scan_sources/src/scan_sources/outputs/: Market_Force_.md  internet_research_20250409_225427.md  internet_research_20250409_230002.md  internet_research_20250409_230250.md  internet_research_20250409_230642.md  internet_research_20250409_231049.md  plan_20250408_144836.md  prep_research_plan_20250407_132826.md  quality_check_20250409_225427.md  (+14 more)
(+130 files in other folders)
