[project]
name = "scan_sources"
version = "0.1.0"
description = "scan_sources using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "exa-py>=1.9.1",
    "firecrawl-py>=1.15.0",
    "scrapfly-sdk>=0.8.21",
]

[project.scripts]
kickoff = "scan_sources.main:kickoff"
plot = "scan_sources.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
